style: fix z-index of search input

--- a/src/components/searchInput/searchInput.module.scss
+++ b/src/components/searchInput/searchInput.module.scss
@@ -10,6 +10,7 @@
   border-radius: 0.5rem;
   background-color: $bg-gray;
   position: relative;
+  z-index: -1;
 
   input {
     width: 95%;
